<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tc_contador_de_productos"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/prod_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/orange">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/cont_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/wine">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/cont_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/blueViolet">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/cont_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/prod_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/blueViolet">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/cont_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod_5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/DarkBlue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/cont_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod_6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/cont_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/prod_7"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/cont_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod_8"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/darkAqua">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/cont_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod_9"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/darkGreen">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/cont_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_usuario"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_usuario"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Correo Electronico"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"/>
    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_txt"/>

</LinearLayout>