<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_factura"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_usuario"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/showUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Correo Electronico"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/showMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/showTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/prod1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/orange">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/tv_cont_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/wine">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/tv_cont_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/blueViolet">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/tv_cont_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/prod4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/blueViolet">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/tv_cont_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/DarkBlue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/tv_cont_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/tv_cont_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/prod7"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/tv_cont_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod8"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@color/darkAqua">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/tv_cont_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/prod9"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/darkGreen">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_producto_1"
                android:textColor="@color/product_textC"
                />

            <TextView
                android:id="@+id/tv_cont_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/product_textC"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_share"/>

</LinearLayout>